Actualización corte linea manual

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h3>Controles Globales</h3>
                 <button id="btn-peak" class="primary">⚡ Pico Nacional (+20%)</button>
                 <button id="btn-trip" class="danger">🎲 Falla Aleatoria de Línea</button>
+                <button id="btn-cut" class="warning">✂️ Cortar Línea (Manual)</button>
                 <button id="btn-reset">🔄 Regenerar Topología</button>
             </div>
 
