ahora tiene datos reales en la ubicación de Colombia

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <button id="btn-peak" class="primary">⚡ Pico Nacional (+20%)</button>
                 <button id="btn-trip" class="danger">🎲 Falla Aleatoria de Línea</button>
                 <button id="btn-cut" class="warning">✂️ Cortar Línea (Manual)</button>
-                <button id="btn-reset">🔄 Regenerar Topología</button>
+                
+                <button id="btn-restart" class="success" style="background-color: #2e7d32;">🔄 Reiniciar Simulación</button>
             </div>
 
             <div class="panel">
