Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div>
-            <h1>Simulador de Red Nacional (Escala Grande)</h1>
+            <h1>Simulador de Red Nacional</h1>
             <div class="subtitle">Topología mallada dinámica</div>
         </div>
         <div id="clock">T = 0.0s</div>
